feat: added images (#59)
* feat: added images

* fix: missing properties

* feat: added images to exim

* fix: code smells
