# src/main/openapi/onecx-bookmark-exim-v1-openapi.yaml
@@ -129,6 +129,18 @@ components:
      position:
       format: int32
       type: integer
+     imageUrl:
+      type: string
+     image:
+      $ref: '#/components/schemas/Image'
+  Image:
+   type: object
+   properties:
+    imageData:
+     type: string
+     format: byte
+    mimeType:
+     type: string
   EximBookmarkScope:
    type: string
    enum:
